<resources>
    <string name="app_name">RegExes</string>
    <string name="start_new_game">Start new game</string>
    <string name="check">Check</string>
    <string name="input">Input</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="close">Close</string>
    <string name="hard">Hard</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
</resources>
